--- a/BingoWebApp/BingoWebApp/appsettings.json
+++ b/BingoWebApp/BingoWebApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-GT3892K\\SQLEXPRESS;Database=Bingo;Trusted_Connection=True"
+  },
   "AllowedHosts": "*"
 }
